# Metis_Genie_Platform

./: LICENSE  README.md
client/: LICENSE  admin.html  alerts.html  analytics.html  api-versioning.html  assets.html  backtesting.html  batch-orders.html  batch-processor.html  benchmarks.html  binary-data.html  charts.html  compliance.html  compute.html  config.pson  constraints.html  corporate-actions.html  correlation.html  dashboards.html  (+47 more)
server/: CMakeLists.txt  CMakePresets.json  config.pson
server/examples/: demo_genie.cpp  example_middleware.cpp  example_portfolio.cpp  example_rest_api.cpp  example_tier2_analytics.cpp  example_trading.cpp
server/include/genie/: genie.hpp
server/include/genie/analytics/: advanced_metrics.hpp  backtesting.hpp  benchmark.hpp  benchmark_builder.hpp  correlation_matrix.hpp  drawdown.hpp  enhanced_metrics.hpp  factor_exposure.hpp  factor_model.hpp  live_valuation.hpp  ml_alpha.hpp  performance_analytics.hpp  real_performance.hpp  real_risk.hpp  regime_detection.hpp  risk_analytics.hpp  risk_attribution.hpp  rolling_stats.hpp  scenario_stress.hpp  strategy_backtester.hpp  timeseries.hpp
server/include/genie/assets/: accrued_interest.hpp  derivatives.hpp  equity.hpp  fixed_income.hpp  fx_commodity.hpp  instrument_master.hpp  private_assets.hpp
server/include/genie/compliance/: compliance_calendar.hpp  compliance_engine.hpp  esg_scoring.hpp  pretrade_compliance.hpp  regulatory.hpp  regulatory_reporting.hpp  trade_surveillance.hpp
server/include/genie/core/: adr.hpp  adr_registry.hpp  alert_manager.hpp  alerts.hpp  api_config_loader.hpp  api_versioning.hpp  audit_log.hpp  batch_processor.hpp  binary_serializer.hpp  cache.hpp  cache_manager.hpp  circuit_breaker.hpp  cli.hpp  compute_device.hpp  config.hpp  config_manager.hpp  config_validator.hpp  connection_pool.hpp  crypto.hpp  data_export.hpp  data_pipeline.hpp  database.hpp  date_utils.hpp  db_migration.hpp  deployment.hpp  distributed_pool.hpp  events.hpp  feature_flags.hpp  file_watcher.hpp  graceful_shutdown.hpp  health_check.hpp  hot_reload.hpp  http_client.hpp  input_sanitizer.hpp  json_logger.hpp  logging.hpp  math_utils.hpp  message_bus.hpp  metric_collector.hpp  metrics.hpp  (+23 more)
server/include/genie/market/: alert_engine.hpp  alpha_vantage.hpp  bloomberg_adapter.hpp  corporate_actions.hpp  currency_hedger.hpp  data_manager.hpp  data_normalizer.hpp  data_quality.hpp  data_quality_rules.hpp  feed_handler.hpp  finnhub_client.hpp  fred_client.hpp  fx_engine.hpp  historical_replay.hpp  iex_cloud.hpp  live_feed.hpp  market_calendar.hpp  market_data.hpp  polygon_client.hpp  price_cache.hpp  price_store.hpp  price_validator.hpp  reuters_adapter.hpp  sec_edgar.hpp  security.hpp  symbol_master.hpp  trading_calendar.hpp  yahoo_finance.hpp
server/include/genie/net/: api_pagination.hpp  auth_provider.hpp  connection_resilience.hpp  error_handler.hpp  http2_server.hpp  http_server.hpp  live_data_provider.hpp  openapi_export.hpp  prometheus_endpoint.hpp  rate_limiter.hpp  request_trace.hpp  response_cache.hpp  response_compression.hpp  rest_api.hpp  route_table.hpp  sse_server.hpp  static_server.hpp  wasm_client.hpp  websocket_manager.hpp  ws_server.hpp
server/include/genie/ops/: approval_workflow.hpp  backup_manager.hpp  container_orchestration.hpp  corporate_actions.hpp  deploy_automation.hpp  health_dashboard.hpp  health_monitor.hpp  k8s_client.hpp  kubernetes_deploy.hpp  task_scheduler.hpp  telemetry.hpp
server/include/genie/performance/: benchmark_manager.hpp  benchmark_tracker.hpp  job_processor.hpp  lazy_loading.hpp  multi_period_attribution.hpp  peer_comparison.hpp  performance_attribution.hpp  performance_engine.hpp  query_optimizer.hpp  response_cache.hpp
server/include/genie/persistence/: data_archiver.hpp  data_quality_monitor.hpp  data_reconciliation.hpp  data_store.hpp  db_migrations.hpp  event_store.hpp  timeseries_store.hpp
server/include/genie/portfolio/: automation.hpp  brinson_attribution.hpp  cash_manager.hpp  dividend_tracker.hpp  fee_calculator.hpp  ibor.hpp  portfolio.hpp  portfolio_constraints.hpp  portfolio_optimizer.hpp  portfolio_snapshot.hpp  position.hpp  position_sync.hpp  rebalance_optimizer.hpp  rebalancing.hpp  reconciliation.hpp  tax_lots.hpp  tax_optimization.hpp
server/include/genie/reporting/: csv_export.hpp  custom_dashboards.hpp  pdf_report.hpp  pdf_writer.hpp  real_reports.hpp  report_scheduler.hpp  report_templates.hpp  reporting.hpp  reporting_extended.hpp  scheduled_reports.hpp  scheduler.hpp  templates.hpp
server/include/genie/risk/: correlated_mc.hpp  cross_asset_hedge.hpp  currency_hedging.hpp  factor_model.hpp  gpu_monte_carlo.hpp  incremental_var.hpp  liquidity_risk.hpp  liquidity_scorer.hpp  margin_calculator.hpp  risk_budgeter.hpp  risk_metrics.hpp  scenario_analysis.hpp  stress_scenarios.hpp  stress_testing.hpp  tail_risk.hpp  var_engine.hpp
server/include/genie/security/: api_key_encryption.hpp  api_key_manager.hpp  audit_trail.hpp  ip_whitelist.hpp  session_manager.hpp  two_factor_auth.hpp
server/include/genie/tax/: tax_lot_optimizer.hpp  tax_tracking.hpp  wash_sale_engine.hpp
server/include/genie/trading/: algo_execution.hpp  alpaca_client.hpp  batch_orders.hpp  broker_abstraction.hpp  broker_interface.hpp  crypto_trading.hpp  enhanced_orders.hpp  execution_analytics.hpp  fix_certification.hpp  fix_engine.hpp  fix_engine_v2.hpp  ibkr_client.hpp  market_impact.hpp  options_integration.hpp  order_book_simulator.hpp  order_management.hpp  order_manager.hpp  order_throttle.hpp  position_sizer.hpp  routing_strategy.hpp  settlement.hpp  settlement_engine.hpp  smart_router.hpp  tca.hpp  tda_client.hpp  trade_allocator.hpp  trade_blotter.hpp  trade_journal.hpp  tradier_client.hpp  trading_system.hpp  webull_client.hpp
server/include/genie/ux/: custom_dashboards.hpp  dashboard.hpp  interactive_charts.hpp  responsive_layout.hpp  symbol_autocomplete.hpp  whatif_scenario.hpp
server/src/: main.cpp
server/stub/openssl/: err.h  ssl.h
server/tests/: test_genie.cpp  test_integration.cpp  test_rest_endpoints.cpp  test_tier3.cpp
(+37 files in other folders)
